# tygent-rust

./: Cargo.toml
src/: accelerate.rs  adaptive_executor.rs  agent.rs  audit.rs  dag.rs  lib.rs  multi_agent.rs  nodes.rs  patch.rs  plan_parser.rs  prefetch.rs  scheduler.rs  service_bridge.rs
src/integration/: anthropic.rs  claude_code.rs  crewai.rs  gemini_cli.rs  google_adk.rs  google_ai.rs  huggingface.rs  langflow.rs  langsmith.rs  microsoft_ai.rs  mod.rs  openai_codex.rs  salesforce.rs
src/integration/framework/: langchain.rs  llamaindex.rs  mod.rs  openai_assistant.rs
