[package]
name = "tygent"
version = "0.5.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time", "sync"] }
thiserror = "1.0"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
async-openai = "0.20"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anthropic = "0.0.8"
